# orka

./: .gitignore  .prettierignore  .prettierrc  compose.yaml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json
.github/workflows/: lint.yml
apps/agent/: pyproject.toml
apps/agent/src/orka_agent/: __init__.py  __main__.py  _builder.py  client.py  config.py  metadata.py
apps/agent/src/orka_agent/domains/: connection.py  node.py
apps/agent/src/orka_agent/gpu/: amd.py  nvidia.py  types.py
apps/api/: pyproject.toml
apps/api/src/orka_api/: __main__.py  errors.py  factory.py  lifespan.py  workspaces.py
apps/api/src/orka_api/broker/: __init__.py  _builder.py  auth.py  message.py
apps/api/src/orka_api/routes/: nodes.py  workspaces.py
apps/api/src/orka_api/services/: jwt.py  nodes.py
apps/web/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/api/: client.ts  nodes.ts  workspaces.ts
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input.tsx  label.tsx  resizable.tsx  separator.tsx  sheet.tsx  sidebar.tsx  table.tsx  tabs.tsx  tooltip.tsx
apps/web/src/features/nodes/: activity-feed-preview.tsx  add-node-sheet.tsx  mock-data.ts  node-detail-previews.tsx  node-settings-panel.tsx  types.ts
apps/web/src/routes/: __root.tsx  _authenticated.tsx  index.tsx
apps/web/src/routes/_authenticated/: _root.$workspaceId.builders.tsx  _root.$workspaceId.endpoints.tsx  _root.$workspaceId.index.tsx  _root.$workspaceId.nodes.tsx  _root.$workspaceId.nodes_.$nodeId.tsx  _root.$workspaceId.services.tsx  _root.$workspaceId.settings.tsx  _root.$workspaceId.templates.tsx  _root.$workspaceId.tsx  index.tsx
